Clean up Unused Imports & Rework deprecated java methods